changing bug report msg

--- a/templates/modals/bug-report-modal.html
+++ b/templates/modals/bug-report-modal.html
@@ -6,7 +6,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>We’re sorry to hear you encountered a bug. Please describe the issue below:</p>
+                <p>Oh no, I've made a mistake. Please describe the issue below. I should get an email:</p>
                 <form id="bugReportForm" onsubmit="submitBugReport(event)">
                     <div class="mb-3">
                         <label for="bugDescription" class="form-label">Bug Description</label>
